# webwizard

./: HOW_TO_CONTRIBUTE.md  Makefile  README.md  examples.py  requirements.txt  setup.cfg
project/: webwizard.py
src/: webwizard.py
src/supplementary/: mirror_website.py  other_files.py  other_functions.py
src/webwizard/: webwizard.py
tests/: __init__.py  test_basic.py
unit_tests/: test_basic.py
