[metadata]
name = webwizard
version = 0.0.4
author = John Nguyen
author_email = jnguyensac@gmail.com
description = A python module to aid and automate CTF web challenges.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Magicks52/webwizard
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4
    requests

[options.packages.find]
where = src
